add changes to frontend code for performance based on google pagespeed insights, and cache headers on the backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Suerte Con Sarah</title>
+    <meta
+      name="description"
+      content="Participa en rifas únicas, gana premios exclusivos y forma parte de la comunidad Suerte Con Sarah. ¡Tu suerte comienza aquí!"
+    />
+    <meta
+      name="keywords"
+      content="rifas, sorteos, premios, Suerte Con Sarah, ganar, juegos, concursos"
+    />
+    <meta name="author" content="Suerte Con Sarah" />
+    <link rel="canonical" href="https://suerteconsarah.com/" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="preload" as="image" href="/premio.jpg" fetchpriority="high" />
+    <!-- Open Graph (Facebook / LinkedIn / WhatsApp) -->
+    <meta property="og:title" content="Suerte Con Sarah" />
+    <meta
+      property="og:description"
+      content="Únete a las rifas más divertidas y gana premios especiales con Suerte Con Sarah."
+    />
+    <meta property="og:image" content="https://suerteconsarah.com/logo.jpg" />
+    <meta property="og:url" content="https://suerteconsarah.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Suerte Con Sarah" />
+    <meta
+      name="twitter:description"
+      content="Rifas emocionantes, premios reales. Participa ahora con Suerte Con Sarah."
+    />
+    <meta name="twitter:image" content="https://suerteconsarah.com/logo.jpg" />
+    <meta name="twitter:creator" content="@suerteconsarah" />
+
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <div id="root"></div>
