add changing prices screen and fix some performacne issues on the frontend, make dockerfile to be build with fallback prices

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,8 @@
     <link
       rel="preload"
       as="image"
-      href="src/assets/premio-500.webp"
+      href="/src/assets/premio-500.webp"
+      type="image/webp"
       fetchpriority="high"
     />
     <!-- Open Graph (Facebook / LinkedIn / WhatsApp) -->
